stop watch working

--- a/Stop Watch/index.html
+++ b/Stop Watch/index.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <title>Stopwatch</title>
 </head>
 <body>
     <div class="stopwatch">
-        <div class="timerDisplay">00 : 00 : 00</div>
+        <span id="hr">0</span>
+        <span>:</span>
+        <span id="min">0</span>
+        <span>:</span>
+        <span id="sec">0</span>
+        <span>:</span>
+        <span id="msec">0</span>
     </div>
-
     <div class="buttons">
-        <button id="stopBtn" class="btn" style="--clr:red;">Stop</button>
-
-        <button id="startBtn" class="btn" style="--clr:green">Start</button>
-
-        <button id="resetBtn" class="btn" style="--clr:blue">Reset</button>
+        <button id="stop" class="btn" onclick="stop()">Stop</button>
+        <button id="start" class="btn" onclick="start()">Start</button>
+        <button id="reset" class="btn" onclick="reset()">Reset</button>
     </div>
-
     <script src="script.js"></script>
+    
 </body>
 </html>
